<resources>
    <string name="app_name">MyShopApp</string>
    <string name="navigation_home">Αρχική</string>
    <string name="navigation_favorites">Αγαπημένα</string>
    <string name="navigation_cart">Καλάθι</string>
    <string name="navigation_profile">Προφίλ</string>
    <string name="switch_dark_mode">Σκοτεινή Λειτουργία</string>
    <string name="switch_language">Αλλαγή γλώσσας σε Αγγλικά</string>
    <string name="products">Προιόντα</string>
    <string name="filters">Φίλτρα</string>
    <string name="search">Αναζήτηση οποιουδήποτε προϊόντος...</string>
    <string name="categories">Επιλογή Κατηγοριών</string>
    <string name="price_range_select">Επιλογή Εύρος Τιμών</string>
    <string name="description">Περιγραφή Προιόντος</string>
    <string name="reviews">Σχόλια</string>
    <string name="add_to_cart">Προσθήκη στο καλάθι</string>
    <string name="leave_a_review">Σχολιάστε</string>
    <string name="write_review">Προσθήκη Σχολίου</string>
    <string name="cancel">Ακύρωση</string>
    <string name="submit">Υποβολή</string>
    <string name="apply">Εφαρμογή</string>
    <string name="apply_coupon">Εφαρμογή Κουπονιού</string>
    <string name="check_out">Ολοκλήρωση Αγοράς</string>
    <string name="complete_order">Ολοκλήρωση Παραγγελίας</string>
    <string name="card">Κάρτα        </string>
    <string name="cash_on_delivery">Μετρητά Στην Παράδοση       </string>
    <string name="my_orders">Οι παραγγελίες μου</string>
    <string name="log_out">Αποσύνδεση</string>
    <string name="empty_cart">"Το καλάθι είναι άδειο</string>
    <string name="total_products">Σύνολο προιόντων</string>
    <string name="subtotal">Υποσύνολο</string>
    <string name="coupod_disc">Έπτωση κουπονιού</string>
    <string name="total">Τελικό Σύνολο</string>
    <string name="address">Διεύθυνση</string>
    <string name="navigation_drawer_open">Άνοιγμα συρταριού πλοήγησης</string>
    <string name="navigation_drawer_close">Κλείσιμο συρταριού πλοήγησης</string>
    <string name="empty_fav">Δεν βρέθηκαν αγαπημένα προιόντα</string>
    <string name="left">Απομένουν</string>
    <string name="exceed">Δεν μπορεί να υπερβεί τη διαθέσιμη ποσότητα</string>
    <string name="address_payment">Συμπληρώστε τη διεύθηνσή σας και επιλέξτε τροόπο πληρωμής</string>
    <string name="successful_order">Επιτυχής παραγγελία</string>
    <string name="failed_order">Ανεπιτυχής ολοκλήρωση παραγγελίας</string>
    <string name="fill_fields">Παρακαλώ συμπληρώστε όλα τα πεδία</string>
    <string name="email">Ηλεκτρονική Διεύθυνση</string>
    <string name="password">Κωδικός</string>
    <string name="login">Σύνδεση</string>
    <string name="not_registered">"Δεν είστε εγγεγραμμένος; Κάντε εγγραφή! "</string>
    <string name="first_name">Όνομα</string>
    <string name="last_name">Επίθετο</string>
    <string name="confirm_password">Επιβεβαίωση Κωδικού</string>
    <string name="register">Εγγραφή</string>
    <string name="already_registered">Είστε ήδη εγγεγραμμένος; Κάντε σύνδεση</string>
    <string name="pass_not_match">Οι κωδικοί δεν ταιριάζουν</string>
    <string name="registration_successful">Επιτυχής εγγραφή</string>
    <string name="registration_failed">Ανεπιτυχής εγγραφή</string>
    <string name="removed_favorites">Αφαιρέθηκε από τα αγαπημένα</string>
    <string name="fav_rem_failed">Ανεπιτυχής αφαίρεση από τα αγαπημένα</string>
    <string name="error_adding_wish">Ανεπιτυχής προσθήκη στα αγαπημένα</string>
    <string name="error_fetching_reviews">Ανεπιτυχής ανάκτηση σχολίων</string>
    <string name="review_submiteed">Επιτυχής υποβολή κριτικής</string>
    <string name="review_submiteed_error">Ανεπιτυχής υποβολή κριτικής</string>
    <string name="fetching_cart_error">Ανεπιτυχής ανάκτηση καλαθιού</string>
    <string name="remove_from_cart">Αφαίρεση από το καλάθι</string>
    <string name="added_to_cart">Προστέθηκε στο καλαθι</string>
    <string name="error_add_cart">Ανεπιτυχής προσθήκη στο καλάθη</string>
    <string name="error_remove_cart">Ανεπιτυχής αφαίρεση από το καλάθι</string>
    <string name="error_fetching_fav">Ανεπιτυχής ανάκτηση αγαπημένων</string>
    <string name="add_to_fav">Προστέθηκε στα αγαπημένα</string>
    <string name="select_categories">Επιλογή Κατηγοριών</string>
    <string name="smartphones">Έξυπνα κινητά τηλέφωνα</string>
    <string name="tablets">Tablets</string>
    <string name="tvs">Tηλεοράσεις</string>
    <string name="soft_acc">Λογισμικό &amp; αξεσουάρ</string>
    <string name="video_games">Βιντεοπαιχνίδια</string>
    <string name="books">Βιβλία</string>
    <string name="laptops">Φορητοί υπολογιστές</string>
    <string name="min_rat">Ελάχιστη Βαθμολογία</string>
    <string name="filt_smartphones">Φίλτρα Έξυπνων Κινητών</string>
    <string name="ram_size">Μέγεθος Ram</string>
    <string name="color">Χρώμα</string>
    <string name="filt_tablets">Φίλτρα Tablet</string>
    <string name="filt_tvs">Φίλτρα τηλεοράσεων</string>
    <string name="screen_size">Μέγεθος Οθόνης</string>
    <string name="resolution">Ανάλυση</string>
    <string name="storage">Αποθηκευτικός χώρος</string>
    <string name="operation_system">Λειτουργικό Σύστημα</string>
    <string name="isSmart">Έξυπνη Τηλεόραση</string>
    <string name="filt_books">Φίλτρα βιβλίων</string>
    <string name="filt_laptops">Φίλτρα Φορητών Υπολογιστών</string>
    <string name="price_range">Εύρος Τιμών: </string>
    <string name="orderID">"Κωδικός Παραγγελίας: "</string>
    <string name="no_orders_message">Δεν υπάρχουν παραγγελίες</string>
    <string name="sure_log_out">Θέλετε σίγουρα να αποσυνδεθείτε;</string>
    <string name="user_not_found">Ο χρήστης δεν βρέθηκε</string>
    <string name="uid_not_found">Δεν βρέθηκε η ταυτότητα του χρήστη</string>
    <string name="login_failed">Ανεπιτυχής σύνδεση</string>
    <string name="welcome">Καλωσόρισες</string>


</resources>
